fixed issue of extraneous scrollbar in Chrome

--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,6 @@ div#wrap { width: 90%; margin: 0 auto; }
 
 /*--HEADER AND NAV--*/
 header {
-  overflow: auto;
   background: white;
   margin: 0 auto;
   width: 111.11%;
